--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BurgerMeister",
+  "name": "Burger-Meister",
   "version": "1.0.0",
   "description": "A burger logger with MySQL, Node, Express, Handlebars and a homemade ORM.",
   "main": "index.js",
